--- a/SPEAR/src/styles.scss
+++ b/SPEAR/src/styles.scss
@@ -10,3 +10,7 @@ $candy-app-warn:    mat-palette($mat-red);
 $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
 
 @include angular-material-theme($candy-app-theme);
+
+body {
+    margin: 0;
+}
