--- a/SPEAR/src/app/components/home/home.component.html
+++ b/SPEAR/src/app/components/home/home.component.html
@@ -1,3 +1,11 @@
-<p>
-  Ethan test
-</p>
+<div class = "bottom-container" color = "primary" fxLayout = "column" fxLayoutAlign = "end">
+    <div class = "text-container" color = "primary" fxLayout = "column" fxLayoutAlign = "center"> 
+      Custom APIs to fix<br>  your data issues
+      <div class = "inner-container" fxLayout = "row" fxLayoutAlign = "start center">
+        <button mat-fab class = "product-button" fxLayoutALign = "center center" (click) = onProduct() color = "primary">
+          View Our Product
+        </button>
+      </div>
+    </div>
+</div>
+
