--- a/SPEAR/src/app/components/home/home.component.html
+++ b/SPEAR/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
     <div class = "text-container" color = "primary" fxLayout = "column" fxLayoutAlign = "center"> 
       Custom APIs to fix<br>  your data issues
       <div class = "inner-container" fxLayout = "row" fxLayoutAlign = "start center">
-        <button mat-fab class = "product-button" fxLayoutALign = "center center" (click) = onProduct() color = "primary">
+        <button mat-fab class = "product-button" fxLayoutALign = "center center" (click) = onProduct()>
           View Our Product
         </button>
       </div>
