--- a/SPEAR/src/app/components/home/home.component.scss
+++ b/SPEAR/src/app/components/home/home.component.scss
@@ -36,6 +36,7 @@
     border: none;
     border-radius: 20px 20px 20px 20px;
     cursor: pointer;
+    background-color: #33a1fd;
     outline: none;
 
 }
