--- a/SPEAR/src/app/components/home/home.component.scss
+++ b/SPEAR/src/app/components/home/home.component.scss
@@ -11,14 +11,20 @@
     background-color: transparent;
     height: 50%;
     width: 100%;
-    font-size: 4em;
+    font-size: 3.8em;
     font-family: Georgia, serif;
     font-weight: bold;
     margin-left: 0.5em;
 }
 
+.text {
+    font-size: 0.35em;
+    font-family: Georgia, serif;
+    font-weight: 100
+}
+
 .bottom-text {
-    font-size: 4em;
+    font-size: 3em;
     font-family: Georgia, serif;
     font-weight: bold;
 }
@@ -28,7 +34,7 @@
   }
 
 .product-button {
-    width: 50%;
+    width: 40%;
     height: 80%;
     font-family: Georgia, serif;
     font-size: .35em;
@@ -38,10 +44,17 @@
     cursor: pointer;
     background-color: #33a1fd;
     outline: none;
-
+    margin-top: 30px;
 }
 
 .inner-container {
     background-color: transparent;
     height: 20%
+}
+
+.image-scroll {
+    background-color: cyan;
+    margin-left: 600px;
+    margin-right: 80px;
+    height: 350px
 }
