--- a/SPEAR/src/app/components/home/home.component.html
+++ b/SPEAR/src/app/components/home/home.component.html
@@ -1,11 +1,18 @@
 <div class = "bottom-container" color = "primary" fxLayout = "column" fxLayoutAlign = "end">
     <div class = "text-container" color = "primary" fxLayout = "column" fxLayoutAlign = "center"> 
-      Custom APIs to fix<br>  your data issues
+      Custom APIs <br> to solve data transfer
+      <div class = "text" >
+        <br>Data is hard. That's why we solve it for you.<br>
+      </div>
       <div class = "inner-container" fxLayout = "row" fxLayoutAlign = "start center">
-        <button mat-fab class = "product-button" fxLayoutALign = "center center" (click) = onProduct()>
+        <button mat-fab class = "product-button" fxLayoutALign = "center" (click) = onProduct()>
           View Our Product
         </button>
       </div>
     </div>
+</div>
+
+<div class = "image-scroll" fxLayout = "row" fxLayoutAlign = "center center">
+    Want to put image silder of product here
 </div>
 
