--- a/SPEAR/src/app/components/about-us/about-us.component.html
+++ b/SPEAR/src/app/components/about-us/about-us.component.html
@@ -1,3 +1,37 @@
-<p>
-  What's up
-</p>
+<div fxLayout=column>
+  <div class="person-container" fxLayout=row>
+    <div class="ethan">
+    <img src="../../../assets/images/SpearEthan.jpg">
+    </div>
+    <div fxFlex></div>
+    <h1>Ethan Astrachan</h1>
+  </div>
+  <div class="person-container" fxLayout=row>
+      <div class="sonny">
+      <img src="../../../assets/images/SpearSonny.png">
+      </div>
+      <div fxFlex></div>
+      <h1>Sonny Byun</h1>
+  </div>
+  <div class="person-container" fxLayout=row>
+      <div class="chip">
+      <img src="../../../assets/images/SpearChip.png">
+      </div>
+      <div fxFlex></div>
+      <h1>Chip Covin</h1>
+  </div>
+   <div class="person-container" fxLayout=row>
+      <div class="dina">
+      <img src="../../../assets/images/SpearDina.png">
+      </div>
+      <div fxFlex></div>
+      <h1>Dina Daas</h1>
+    </div>
+    <div class="person-container" fxLayout=row>
+        <div class="luke">
+      <img src="../../../assets/images/SpearLuke.jpg">
+        </div>
+      <div fxFlex></div>
+      <h1>Luke Truitt</h1>
+    </div>
+</div>
