--- a/SPEAR/src/app/components/contact/contact.component.html
+++ b/SPEAR/src/app/components/contact/contact.component.html
@@ -1,3 +1,7 @@
-<p>
-  contact works!
-</p>
+<h1 style="text-align: center;">
+  Glad you're interested! Just reach out at
+  </h1>
+  \\
+  <h1 style="text-align: center;">
+      team@spearautomation.com
+  </h1>
