--- a/SPEAR/src/app/components/home/home.component.scss
+++ b/SPEAR/src/app/components/home/home.component.scss
@@ -1,5 +1,6 @@
 
 .bottom-container {
+  text-align: center;
     background-color: transparent;
     position: absolute;
     top: 0;
@@ -8,6 +9,7 @@
 }
 
 .text-container {
+  text-align: center;
     background-color: transparent;
     height: 50%;
     width: 100%;
@@ -45,16 +47,11 @@
     background-color: #33a1fd;
     outline: none;
     margin-top: 30px;
+    text-align: center;
 }
 
 .inner-container {
+    text-align: center;
     background-color: transparent;
     height: 20%
-}
-
-.image-scroll {
-    background-color: cyan;
-    margin-left: 600px;
-    margin-right: 80px;
-    height: 350px
 }
