--- a/SPEAR/src/app/components/product/product.component.html
+++ b/SPEAR/src/app/components/product/product.component.html
@@ -1,3 +1,9 @@
-<p>
-  product works!
-</p>
+<div class="label-text">Bring in Your Systems</div>
+<img src = "../../../assets/images/SpearSystemScreen.PNG">
+<div class="label-text">Connect your Fields</div>
+<img src = "../../../assets/images/SpearSystemScreen2.PNG">
+<div class="label-text">Create the Rules and Launch the Service</div>
+<img src = "../../../assets/images/SpearPopup.PNG">
+<div class="label-text">Monitor it's Status</div>
+<img src = "../../../assets/images/SpearDashboard.PNG" >
+
