--- a/SPEAR/src/app/components/home/home.component.html
+++ b/SPEAR/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class = "bottom-container" color = "primary" fxLayout = "column" fxLayoutAlign = "end">
   <div class = "text-container" color = "primary" fxLayout = "column" fxLayoutAlign = "center">
-      Custom APIs to solve data transfer
+      Custom APIs <br> to solve data transfer
       <div class = "text" >
         <br>Data is hard. That's why we solve it for you.<br>
       </div>
