Updates on Home Page

--- a/SPEAR/src/app/app.component.scss
+++ b/SPEAR/src/app/app.component.scss
@@ -50,11 +50,11 @@
 
 .top-bar {
   background-color: transparent;
-  position: fixed;
+  position: absolute;
   top: 0;
 }
 
 .bottom-bar {
-  background-color: transparent;
+  background-color: #034078;
   bottom: 0;
 }
