--- a/SPEAR/src/app/components/home/home.component.html
+++ b/SPEAR/src/app/components/home/home.component.html
@@ -1,15 +1,19 @@
-<div class = "bottom-container" color = "primary" fxLayout = "column" fxLayoutAlign = "end">
-  <div class = "text-container" color = "primary" fxLayout = "column" fxLayoutAlign = "center">
-      Custom APIs <br> to solve data transfer
-      <div class = "text" >
-        <br>Data is hard. That's why we solve it for you.<br>
-      </div>
-      <div class = "inner-container" fxLayout = "row" fxLayoutAlign = "start center">
-        <button mat-fab class = "product-button" fxLayoutALign = "center" (click) = onProduct()>
-          View Our Product
-        </button>
-      </div>
+<div class = "intro-container" fxLayout = "row" fxLayoutAlign = "center center">
+    <div class = "intro-text">
+        Custom APIs to fix your data transfer issues
     </div>
+</div>
+<div class = "about-us-container" fxLayout = "column" fxLayoutAlign = "start center">
+    <div class = "about-us-box" fxLayoutAlign = "center center">
+      About Us
+    </div>
+    <div class = "about-us-text" fxLayoutAlign = "center center" >
+        Lorem ipsum dolor sit amet, eu cum nostro consetetur, <br>
+        te fabulas impedit vis, pro habemus singulis consulatu ad. 
+    </div>
+    <button mat-raised-button class = "product-button" fxLayoutAlign = "center center" (click) = "onAboutUs()">
+        Read More
+    </button>
 </div>
 
 
