--- a/SPEAR/src/app/components/home/home.component.scss
+++ b/SPEAR/src/app/components/home/home.component.scss
@@ -1,11 +1,16 @@
+.intro-container {
+    margin-top: 2cm;
+    background-image: url('/assets/images/datatransfer.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 18cm;
+}
 
-.bottom-container {
-  text-align: center;
+.about-us-container {
     background-color: transparent;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
+    width: 100%;
+    height: 18cm;
 }
 
 .text-container {
@@ -18,16 +23,25 @@
     margin-left: 0.5em;
 }
 
-.text {
-    font-size: 0.35em;
+.intro-text {
+    margin-top: -1cm;
+    font-size: 1.3cm;
     font-family: Georgia, serif;
-    font-weight: 100
+    font-weight: bold
 }
 
-.bottom-text {
-    font-size: 3em;
+.about-us-box {
+    width: 6cm;
+    font-size: 1.3cm;
     font-family: Georgia, serif;
-    font-weight: bold;
+    height: 3cm;
+}
+
+.about-us-text {
+    height: min-content;
+    width: 70%;
+    margin-top: 2cm;
+    font-size: 1.5cm;
 }
 
 .fill {
@@ -35,17 +49,17 @@
   }
 
 .product-button {
-    width: 40%;
-    height: 80%;
+    width: 6cm;
+    height: 1.5cm;
     font-family: Georgia, serif;
-    font-size: .35em;
+    font-size: .5cm;
     background-repeat: no-repeat;
     border: none;
     border-radius: 20px 20px 20px 20px;
     cursor: pointer;
     background-color: #33a1fd;
     outline: none;
-    margin-top: 30px;
+    margin-top: 2cm;
     text-align: center;
 }
 
