--- a/SPEAR/src/app/components/home/home.component.html
+++ b/SPEAR/src/app/components/home/home.component.html
@@ -5,15 +5,17 @@
 </div>
 <div class = "about-us-container" fxLayout = "column" fxLayoutAlign = "start center">
     <div class = "about-us-box" fxLayoutAlign = "center center">
-      About Us
     </div>
     <div class = "about-us-text" fxLayoutAlign = "center center" >
-        Lorem ipsum dolor sit amet, eu cum nostro consetetur, <br>
+        Lorem ipsum dolor sit amet, eu cum nostro consetetur,
         te fabulas impedit vis, pro habemus singulis consulatu ad. 
     </div>
     <button mat-raised-button class = "product-button" fxLayoutAlign = "center center" (click) = "onAboutUs()">
-        Read More
+        <div>Read More</div>
     </button>
+</div>
+<div class = "product-container" fxLayout = "column" fxLayoutAlign = "start center">
+
 </div>
 
 
