--- a/SPEAR/src/app/components/home/home.component.scss
+++ b/SPEAR/src/app/components/home/home.component.scss
@@ -8,6 +8,15 @@
 }
 
 .about-us-container {
+    background-image: url('/assets/images/teambackground.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    width: 100%;
+    height: 18cm;
+}
+
+.product-container {
     background-color: transparent;
     width: 100%;
     height: 18cm;
@@ -24,7 +33,6 @@
 }
 
 .intro-text {
-    margin-top: -1cm;
     font-size: 1.3cm;
     font-family: Georgia, serif;
     font-weight: bold
@@ -39,8 +47,10 @@
 
 .about-us-text {
     height: min-content;
+    font-size: bold;
+    color: #33a1fd;
     width: 70%;
-    margin-top: 2cm;
+    margin-top: 3cm;
     font-size: 1.5cm;
 }
 
@@ -58,8 +68,9 @@
     border-radius: 20px 20px 20px 20px;
     cursor: pointer;
     background-color: #33a1fd;
+    font-weight: bold;
     outline: none;
-    margin-top: 2cm;
+    margin-top: 3cm;
     text-align: center;
 }
 
@@ -68,3 +79,5 @@
     background-color: transparent;
     height: 20%
 }
+
+
