Updates on Home

--- a/SPEAR/src/app/components/home/home.component.scss
+++ b/SPEAR/src/app/components/home/home.component.scss
@@ -13,7 +13,7 @@
     background-size: cover;
     background-position: center center;
     width: 100%;
-    height: 18cm;
+    height: 17cm;
 }
 
 .product-container {
@@ -38,19 +38,12 @@
     font-weight: bold
 }
 
-.about-us-box {
-    width: 6cm;
-    font-size: 1.3cm;
-    font-family: Georgia, serif;
-    height: 3cm;
-}
-
 .about-us-text {
     height: min-content;
     font-size: bold;
     color: #33a1fd;
     width: 70%;
-    margin-top: 3cm;
+    margin-top: 6cm;
     font-size: 1.5cm;
 }
 
@@ -58,7 +51,7 @@
     flex: 1 1 auto;
   }
 
-.product-button {
+.about-us-button {
     width: 6cm;
     height: 1.5cm;
     font-family: Georgia, serif;
@@ -80,4 +73,40 @@
     height: 20%
 }
 
+.product-text {
+    height: 100%;
+    font-size: bold;
+    background: transparent;
+    margin-top: 1cm;
+    width: 50%;
+    font-size: 1.5cm;
+}
+
+
+.product-picture {
+    height: 10cm;
+    font-size: bold;
+    background-image: url('/assets/images/SpearDashboard.PNG');
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-right: 1cm;
+    width: 50%;
+    font-size: 1.5cm;
+}
+
+.product-button {
+    width: 6cm;
+    height: 1.5cm;
+    font-family: Georgia, serif;
+    font-size: .5cm;
+    background-repeat: no-repeat;
+    border: none;
+    border-radius: 20px 20px 20px 20px;
+    cursor: pointer;
+    background-color: #33a1fd;
+    font-weight: bold;
+    outline: none;
+    text-align: center;
+    margin-top: 1cm;
+}
 
