--- a/SPEAR/src/app/components/home/home.component.html
+++ b/SPEAR/src/app/components/home/home.component.html
@@ -4,18 +4,24 @@
     </div>
 </div>
 <div class = "about-us-container" fxLayout = "column" fxLayoutAlign = "start center">
-    <div class = "about-us-box" fxLayoutAlign = "center center">
-    </div>
     <div class = "about-us-text" fxLayoutAlign = "center center" >
         Lorem ipsum dolor sit amet, eu cum nostro consetetur,
         te fabulas impedit vis, pro habemus singulis consulatu ad. 
     </div>
-    <button mat-raised-button class = "product-button" fxLayoutAlign = "center center" (click) = "onAboutUs()">
+    <button mat-raised-button class = "about-us-button" fxLayoutAlign = "center center" (click) = "onAboutUs()">
         <div>Read More</div>
     </button>
 </div>
-<div class = "product-container" fxLayout = "column" fxLayoutAlign = "start center">
-
+<div class = "product-container" fxLayout = "row" fxLayoutAlign = "center center">
+    <div class = "product-text" fxLayout = "column" fxLayoutAlign = "center center" >
+        Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+        te fabulas impedit vis, pro habemus singulis consulatu ad. 
+        <button mat-raised-button class = "product-button" fxLayoutAlign = "center center" (click) = "onAboutUs()">
+            <div>What We Do</div>
+        </button>
+    </div>
+    <div class = "product-picture" fxLayoutAlign = "center" >
+    </div>
 </div>
 
 
