--- a/SPEAR/src/app/components/home/home.component.html
+++ b/SPEAR/src/app/components/home/home.component.html
@@ -16,12 +16,21 @@
     <div class = "product-text" fxLayout = "column" fxLayoutAlign = "center center" >
         Lorem ipsum dolor sit amet, eu cum nostro consetetur,
         te fabulas impedit vis, pro habemus singulis consulatu ad. 
-        <button mat-raised-button class = "product-button" fxLayoutAlign = "center center" (click) = "onAboutUs()">
+        <button mat-raised-button class = "product-button" fxLayoutAlign = "center center" (click) = "onProduct()">
             <div>What We Do</div>
         </button>
     </div>
     <div class = "product-picture" fxLayoutAlign = "center" >
     </div>
+</div>
+<div class = "roadmap-container" fxLayout = "column" fxLayoutAlign = "center center">
+    <div class = "roadmap-text" fxLayoutAlign = "center center" >
+        Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+        te fabulas impedit vis, pro habemus singulis consulatu ad. 
+    </div>
+    <button mat-raised-button class = "roadmap-button" fxLayoutAlign = "center center" (click) = "onRoadmap()">
+        <div>Where We're Going</div>
+    </button>
 </div>
 
 
