--- a/SPEAR/src/app/components/home/home.component.scss
+++ b/SPEAR/src/app/components/home/home.component.scss
@@ -13,10 +13,16 @@
     background-size: cover;
     background-position: center center;
     width: 100%;
-    height: 17cm;
+    height: 18cm;
 }
 
 .product-container {
+    background-color: transparent;
+    width: 100%;
+    height: 18cm;
+}
+
+.roadmap-container {
     background-color: transparent;
     width: 100%;
     height: 18cm;
@@ -47,10 +53,6 @@
     font-size: 1.5cm;
 }
 
-.fill {
-    flex: 1 1 auto;
-  }
-
 .about-us-button {
     width: 6cm;
     height: 1.5cm;
@@ -78,6 +80,7 @@
     font-size: bold;
     background: transparent;
     margin-top: 1cm;
+    margin-left: 0.5cm;
     width: 50%;
     font-size: 1.5cm;
 }
@@ -108,5 +111,30 @@
     outline: none;
     text-align: center;
     margin-top: 1cm;
+    margin-left: -0.5cm;
 }
 
+
+.roadmap-text {
+    height: min-content;
+    font-size: bold;
+    width: 70%;
+    margin-top: 6cm;
+    font-size: 1.5cm;
+}
+
+.roadmap-button {
+    width: 6cm;
+    height: 1.5cm;
+    font-family: Georgia, serif;
+    font-size: .5cm;
+    background-repeat: no-repeat;
+    border: none;
+    border-radius: 20px 20px 20px 20px;
+    cursor: pointer;
+    background-color: #33a1fd;
+    font-weight: bold;
+    outline: none;
+    margin-top: 3cm;
+    text-align: center;
+}
