About Us changes

--- a/SPEAR/src/app/components/about-us/about-us.component.html
+++ b/SPEAR/src/app/components/about-us/about-us.component.html
@@ -1,32 +1,31 @@
-<div fxLayout=column>
-  <div class="person-container" fxLayout=row>
-    <div class="ethan">
-    <img src="../../../assets/images/SpearEthan.jpg">
+<div class = "intro-container" fxLayout = "column" fxLayoutAlign = "center">
+    <div class = "image-cropper">
+        <img src="../../../assets/images/SpearEthan.jpg" class = "ethan-pic">
     </div>
-    <div fxFlex></div>
-    <h1>Ethan Astrachan</h1>
-  </div>
-  <div class="person-container" fxLayout=row>
-      <div class="sonny">
-      <img src="../../../assets/images/SpearSonny.png">
-      </div>
-      <div fxFlex></div>
-      <h1>Sonny Byun</h1>
-  </div>
-  <div class="person-container" fxLayout=row>
-      <div class="chip">
-      <img src="../../../assets/images/SpearChip.png">
-      </div>
-      <div fxFlex></div>
-      <h1>Chip Covin</h1>
-  </div>
-   <div class="person-container" fxLayout=row>
-      <div class="dina">
-      <img src="../../../assets/images/SpearDina.png">
-      </div>
-      <div fxFlex></div>
-      <h1>Dina Daas</h1>
+</div>
+<div class = "person-container" fxLayout = "column" fxLayoutAlign = "center">
+    <div class = "image-cropper">
+      <img src="../../../assets/images/SpearSonny.png" class = "sonny-pic">
     </div>
+</div>
+<div class = "person-container" fxLayout = "column" fxLayoutAlign = "center">
+  <div class = "image-cropper">
+    <img src="../../../assets/images/SpearChip.png" class = "chip-pic">
+  </div>
+</div>
+<div class = "person-container" fxLayout = "column" fxLayoutAlign = "center">
+  <div class = "image-cropper">
+    <img src="../../../assets/images/SpearDina.png" class = "dina-pic">
+  </div>
+</div>
+<div class = "person-container" fxLayout = "column" fxLayoutAlign = "center">
+  <div class = "image-cropper">
+    <img src="../../../assets/images/SpearLuke.jpg" class = "luke-pic">
+  </div>
+</div>
+
+
+<!-- <div fxLayout=column>
     <div class="person-container" fxLayout=row>
         <div class="luke">
       <img src="../../../assets/images/SpearLuke.jpg">
@@ -34,4 +33,4 @@
       <div fxFlex></div>
       <h1>Luke Truitt</h1>
     </div>
-</div>
+</div> -->
