--- a/SPEAR/src/app/components/home/home.component.html
+++ b/SPEAR/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
         Custom APIs to fix your data transfer issues
     </div>
 </div>
-<div class = "about-us-container" fxLayout = "column" fxLayoutAlign = "start center">
+<div class = "about-us-container" fxLayout = "column" fxLayoutAlign = "end center">
     <div class = "about-us-text" fxLayoutAlign = "center center" >
         Lorem ipsum dolor sit amet, eu cum nostro consetetur,
         te fabulas impedit vis, pro habemus singulis consulatu ad. 
