--- a/SPEAR/src/app/components/home/home.component.scss
+++ b/SPEAR/src/app/components/home/home.component.scss
@@ -10,10 +10,11 @@
 .about-us-container {
     background-image: url('/assets/images/teambackground.png');
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
+    background-size: 80%;
+    background-position: top 10% left 50%;
+    background-origin: initial;
     width: 100%;
-    height: 18cm;
+    height: 20cm;
 }
 
 .product-container {
@@ -48,7 +49,7 @@
     height: min-content;
     font-size: bold;
     width: 70%;
-    margin-top: 6cm;
+    margin-top: 12cm;
     font-size: 1.5cm;
 }
 
@@ -64,7 +65,7 @@
     background-color: #33a1fd;
     font-weight: bold;
     outline: none;
-    margin-top: 3cm;
+    margin-top: 1cm;
     text-align: center;
 }
 
