Updates to About Us

--- a/SPEAR/src/app/components/about-us/about-us.component.html
+++ b/SPEAR/src/app/components/about-us/about-us.component.html
@@ -2,25 +2,95 @@
     <div class = "image-cropper">
         <img src="../../../assets/images/SpearEthan.jpg" class = "ethan-pic">
     </div>
+    <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
+        Ethan Astrachan
+        <ul class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
+          <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+          te fabulas impedit vis, pro habemus singulis consulatu ad. 
+          </li>
+          <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+            te fabulas impedit vis, pro habemus singulis consulatu ad. 
+          </li>
+          <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+            te fabulas impedit vis, pro habemus singulis consulatu ad. 
+          </li>
+        </ul>
+    </div>
 </div>
 <div class = "person-container" fxLayout = "column" fxLayoutAlign = "center">
     <div class = "image-cropper">
       <img src="../../../assets/images/SpearSonny.png" class = "sonny-pic">
+    </div>
+    <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
+      Sonny Byun
+      <ul class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
+        <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+        te fabulas impedit vis, pro habemus singulis consulatu ad. 
+        </li>
+        <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+          te fabulas impedit vis, pro habemus singulis consulatu ad. 
+        </li>
+        <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+          te fabulas impedit vis, pro habemus singulis consulatu ad. 
+        </li>
+      </ul>
     </div>
 </div>
 <div class = "person-container" fxLayout = "column" fxLayoutAlign = "center">
   <div class = "image-cropper">
     <img src="../../../assets/images/SpearChip.png" class = "chip-pic">
   </div>
+  <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
+    Chip Covin
+    <ul class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
+      <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+      te fabulas impedit vis, pro habemus singulis consulatu ad. 
+      </li>
+      <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+        te fabulas impedit vis, pro habemus singulis consulatu ad. 
+      </li>
+      <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+        te fabulas impedit vis, pro habemus singulis consulatu ad. 
+      </li>
+    </ul>
+  </div>
 </div>
 <div class = "person-container" fxLayout = "column" fxLayoutAlign = "center">
   <div class = "image-cropper">
     <img src="../../../assets/images/SpearDina.png" class = "dina-pic">
   </div>
+  <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
+    Dina Daas
+    <ul class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
+      <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+      te fabulas impedit vis, pro habemus singulis consulatu ad. 
+      </li>
+      <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+        te fabulas impedit vis, pro habemus singulis consulatu ad. 
+      </li>
+      <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+        te fabulas impedit vis, pro habemus singulis consulatu ad. 
+      </li>
+    </ul>
+  </div>
 </div>
 <div class = "person-container" fxLayout = "column" fxLayoutAlign = "center">
   <div class = "image-cropper">
     <img src="../../../assets/images/SpearLuke.jpg" class = "luke-pic">
+  </div>
+  <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
+    <div>Luke Truitt</div>
+    <ul class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
+      <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+      te fabulas impedit vis, pro habemus singulis consulatu ad. 
+      </li>
+      <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+        te fabulas impedit vis, pro habemus singulis consulatu ad. 
+      </li>
+      <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+        te fabulas impedit vis, pro habemus singulis consulatu ad. 
+      </li>
+    </ul>
   </div>
 </div>
 
