--- a/SPEAR/src/app/components/about-us/about-us.component.scss
+++ b/SPEAR/src/app/components/about-us/about-us.component.scss
@@ -17,6 +17,28 @@
   border-radius: 50%;
   margin-left: 1cm;
 }
+
+.about-text {
+  position: absolute;
+  right: 0;
+  margin-right: 1cm;
+  font-family: Georgia, serif;
+  width: 15cm;
+  height: 4cm;
+  font-size: 0.7cm;
+  font-weight: bold;
+  margin-left: -1cm;
+}
+
+.about-inner-text {
+  width: 100%;
+  height: 90%;
+  font-size: 0.4cm;
+  font-weight: normal;
+  margin-left: -0.5cm;
+  margin-top: -0cm;
+}
+
 .ethan-pic {
   display: inline;
   margin: 0 auto;
@@ -60,4 +82,6 @@
   height: 170%;
   width: auto;
 }
+
+
   
