Changes to Product and About Us

--- a/SPEAR/src/app/components/about-us/about-us.component.html
+++ b/SPEAR/src/app/components/about-us/about-us.component.html
@@ -17,7 +17,7 @@
         </ul>
     </div>
 </div>
-<div class = "person-container" fxLayout = "column" fxLayoutAlign = "center">
+<div class = "even-person-container" fxLayout = "column" fxLayoutAlign = "center">
     <div class = "image-cropper">
       <img src="../../../assets/images/SpearSonny.png" class = "sonny-pic">
     </div>
@@ -36,7 +36,7 @@
       </ul>
     </div>
 </div>
-<div class = "person-container" fxLayout = "column" fxLayoutAlign = "center">
+<div class = "odd-person-container" fxLayout = "column" fxLayoutAlign = "center">
   <div class = "image-cropper">
     <img src="../../../assets/images/SpearChip.png" class = "chip-pic">
   </div>
@@ -55,7 +55,7 @@
     </ul>
   </div>
 </div>
-<div class = "person-container" fxLayout = "column" fxLayoutAlign = "center">
+<div class = "even-person-container" fxLayout = "column" fxLayoutAlign = "center">
   <div class = "image-cropper">
     <img src="../../../assets/images/SpearDina.png" class = "dina-pic">
   </div>
@@ -74,7 +74,7 @@
     </ul>
   </div>
 </div>
-<div class = "person-container" fxLayout = "column" fxLayoutAlign = "center">
+<div class = "odd-person-container" fxLayout = "column" fxLayoutAlign = "center">
   <div class = "image-cropper">
     <img src="../../../assets/images/SpearLuke.jpg" class = "luke-pic">
   </div>
