--- a/SPEAR/src/app/components/product/product.component.html
+++ b/SPEAR/src/app/components/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="label-text">Bring in Your Systems</div>
+<div class="intro-text">Bring in Your Systems</div>
 <img src = "../../../assets/images/SpearSystemScreen.PNG">
 <div class="label-text">Connect your Fields</div>
 <img src = "../../../assets/images/SpearSystemScreen2.PNG">
