--- a/SPEAR/src/app/components/about-us/about-us.component.scss
+++ b/SPEAR/src/app/components/about-us/about-us.component.scss
@@ -1,17 +1,37 @@
+
 .intro-container {
   width: 100%;
-  height: 6cm;
+  height: 10cm;
   margin-top: 3cm;
+  border-color: black;
+  border-bottom-style: solid;
+  border-bottom-width: .2cm;
+  background-color: grey;
 }
 
-.person-container {
+.even-person-container {
   width: 100%;
-  height: 6cm;
+  height: 10cm;
+  border-bottom-width: .1cm;
+  background-color: #034078;
+  border-color: black;
+  border-bottom-style: solid;
+  border-bottom-width: .2cm;
+}
+
+.odd-person-container {
+  width: 100%;
+  height: 10cm;
+  border-bottom-width: .1cm;
+  background-color: grey;
+  border-color: black;
+  border-bottom-style: solid;
+  border-bottom-width: .2cm;
 }
 
 .image-cropper {
-  width: 4cm;
-  height: 4cm;
+  width: 7cm;
+  height: 7cm;
   position: relative;
   overflow: hidden;
   border-radius: 50%;
@@ -23,17 +43,18 @@
   right: 0;
   margin-right: 1cm;
   font-family: Georgia, serif;
-  width: 15cm;
-  height: 4cm;
-  font-size: 0.7cm;
+  width: 19cm;
+  height: 6cm;
+  font-size: 1.3cm;
   font-weight: bold;
   margin-left: -1cm;
+  color: white
 }
 
 .about-inner-text {
   width: 100%;
   height: 90%;
-  font-size: 0.4cm;
+  font-size: 0.6cm;
   font-weight: normal;
   margin-left: -0.5cm;
   margin-top: -0cm;
@@ -42,9 +63,9 @@
 .ethan-pic {
   display: inline;
   margin: 0 auto;
-  margin-left: -50%; 
-  margin-top: -10%;
-  height: 140%;
+  margin-left: -58%; 
+  margin-top: -20%;
+  height: 150%;
   width: auto;
 }
 
