--- a/SPEAR/src/app/components/product/product.component.scss
+++ b/SPEAR/src/app/components/product/product.component.scss
@@ -51,3 +51,16 @@ img {
   padding: 20px;
   text-align: center;
 }
+
+.intro-text {
+  color: black;
+  font-weight: bold;
+  font-size: 40px;
+  border: 10px solid #f1f1f1;
+  left: 50%;
+  z-index: 2;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+  margin-top: 3cm;
+}
