--- a/SPEAR/src/app/components/about-us/about-us.component.html
+++ b/SPEAR/src/app/components/about-us/about-us.component.html
@@ -4,6 +4,9 @@
     </div>
     <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
         Ethan Astrachan
+        <div style="font-size: .5cm">
+          Duke University Class of 2021 || Computer Science and Political Science
+        </div>
         <ul class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
           <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
           te fabulas impedit vis, pro habemus singulis consulatu ad. 
@@ -23,6 +26,9 @@
     </div>
     <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
       Sonny Byun
+      <div style="font-size: .5cm">
+        Duke University Class of 2019 || Public Policy
+      </div>
       <ul class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
         <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
         te fabulas impedit vis, pro habemus singulis consulatu ad. 
@@ -42,6 +48,9 @@
   </div>
   <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
     Chip Covin
+    <div style="font-size: .5cm">
+      Idk when Chip graduated from Fuqua and what his major is
+    </div>
     <ul class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
       <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
       te fabulas impedit vis, pro habemus singulis consulatu ad. 
@@ -61,6 +70,9 @@
   </div>
   <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
     Dina Daas
+    <div style="font-size: .5cm">
+      Duke University Class of 2020 || Dina's majors
+    </div>
     <ul class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
       <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
       te fabulas impedit vis, pro habemus singulis consulatu ad. 
@@ -80,6 +92,9 @@
   </div>
   <div class = "about-text" fxLayout = "column" fxLayoutAlign = "start">
     <div>Luke Truitt</div>
+    <div style="font-size: .5cm">
+      Duke University Class of 2021 || Luke's majors
+    </div>
     <ul class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
       <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
       te fabulas impedit vis, pro habemus singulis consulatu ad. 
