Updates to About Us

--- a/SPEAR/src/app/components/about-us/about-us.component.html
+++ b/SPEAR/src/app/components/about-us/about-us.component.html
@@ -7,17 +7,14 @@
         <div style="font-size: .5cm">
           Duke University Class of 2021 || Computer Science and Political Science
         </div>
-        <ul class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
-          <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+        <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
+          Lorem ipsum dolor sit amet, eu cum nostro consetetur,
           te fabulas impedit vis, pro habemus singulis consulatu ad. 
-          </li>
-          <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-            te fabulas impedit vis, pro habemus singulis consulatu ad. 
-          </li>
-          <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-            te fabulas impedit vis, pro habemus singulis consulatu ad. 
-          </li>
-        </ul>
+          Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+          te fabulas impedit vis, pro habemus singulis consulatu ad.
+          Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+          te fabulas impedit vis, pro habemus singulis consulatu ad. 
+        </div>
     </div>
 </div>
 <div class = "even-person-container" fxLayout = "column" fxLayoutAlign = "center">
@@ -29,17 +26,14 @@
       <div style="font-size: .5cm">
         Duke University Class of 2019 || Public Policy
       </div>
-      <ul class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
-        <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+      <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
+        Lorem ipsum dolor sit amet, eu cum nostro consetetur,
         te fabulas impedit vis, pro habemus singulis consulatu ad. 
-        </li>
-        <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-          te fabulas impedit vis, pro habemus singulis consulatu ad. 
-        </li>
-        <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-          te fabulas impedit vis, pro habemus singulis consulatu ad. 
-        </li>
-      </ul>
+        Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+        te fabulas impedit vis, pro habemus singulis consulatu ad.
+        Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+        te fabulas impedit vis, pro habemus singulis consulatu ad. 
+      </div>
     </div>
 </div>
 <div class = "odd-person-container" fxLayout = "column" fxLayoutAlign = "center">
@@ -51,17 +45,14 @@
     <div style="font-size: .5cm">
       Idk when Chip graduated from Fuqua and what his major is
     </div>
-    <ul class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
-      <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+    <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
+      Lorem ipsum dolor sit amet, eu cum nostro consetetur,
       te fabulas impedit vis, pro habemus singulis consulatu ad. 
-      </li>
-      <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-        te fabulas impedit vis, pro habemus singulis consulatu ad. 
-      </li>
-      <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-        te fabulas impedit vis, pro habemus singulis consulatu ad. 
-      </li>
-    </ul>
+      Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+      te fabulas impedit vis, pro habemus singulis consulatu ad.
+      Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+      te fabulas impedit vis, pro habemus singulis consulatu ad. 
+    </div>
   </div>
 </div>
 <div class = "even-person-container" fxLayout = "column" fxLayoutAlign = "center">
@@ -73,17 +64,14 @@
     <div style="font-size: .5cm">
       Duke University Class of 2020 || Dina's majors
     </div>
-    <ul class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
-      <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+    <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
+      Lorem ipsum dolor sit amet, eu cum nostro consetetur,
       te fabulas impedit vis, pro habemus singulis consulatu ad. 
-      </li>
-      <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-        te fabulas impedit vis, pro habemus singulis consulatu ad. 
-      </li>
-      <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-        te fabulas impedit vis, pro habemus singulis consulatu ad. 
-      </li>
-    </ul>
+      Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+      te fabulas impedit vis, pro habemus singulis consulatu ad.
+      Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+      te fabulas impedit vis, pro habemus singulis consulatu ad. 
+    </div>
   </div>
 </div>
 <div class = "odd-person-container" fxLayout = "column" fxLayoutAlign = "center">
@@ -95,27 +83,14 @@
     <div style="font-size: .5cm">
       Duke University Class of 2021 || Luke's majors
     </div>
-    <ul class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
-      <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+    <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
+      Lorem ipsum dolor sit amet, eu cum nostro consetetur,
       te fabulas impedit vis, pro habemus singulis consulatu ad. 
-      </li>
-      <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-        te fabulas impedit vis, pro habemus singulis consulatu ad. 
-      </li>
-      <li>Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-        te fabulas impedit vis, pro habemus singulis consulatu ad. 
-      </li>
-    </ul>
+      Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+      te fabulas impedit vis, pro habemus singulis consulatu ad.
+      Lorem ipsum dolor sit amet, eu cum nostro consetetur,
+      te fabulas impedit vis, pro habemus singulis consulatu ad. 
+    </div>
   </div>
 </div>
 
-
-<!-- <div fxLayout=column>
-    <div class="person-container" fxLayout=row>
-        <div class="luke">
-      <img src="../../../assets/images/SpearLuke.jpg">
-        </div>
-      <div fxFlex></div>
-      <h1>Luke Truitt</h1>
-    </div>
-</div> -->
