Updates to About Us

--- a/SPEAR/src/app/components/about-us/about-us.component.scss
+++ b/SPEAR/src/app/components/about-us/about-us.component.scss
@@ -6,6 +6,8 @@
   border-color: black;
   border-bottom-style: solid;
   border-bottom-width: .2cm;
+  border-top-style: solid;
+  border-top-width: .2cm;
   background-color: grey;
 }
 
