--- a/SPEAR/src/app/components/about-us/about-us.component.html
+++ b/SPEAR/src/app/components/about-us/about-us.component.html
@@ -8,12 +8,9 @@
           Duke University Class of 2021 || Computer Science and Political Science
         </div>
         <div class = "about-inner-text" fxLayout = "column" fxLayoutAlign = "center">
-          Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-          te fabulas impedit vis, pro habemus singulis consulatu ad. 
-          Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-          te fabulas impedit vis, pro habemus singulis consulatu ad.
-          Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-          te fabulas impedit vis, pro habemus singulis consulatu ad. 
+          Ethan is a sophomore at Duke University passionate about applying technology to create more efficient policy solutions. 
+          He works as a Research Assistant, using natural word processing to help predict civil crackdowns in partnership with USAID, and as Treasurer for Camp Kesem at Duke University, a non-profit serving children affected by a parents cancer. 
+          He has previously worked on a congressional campaign assisting with fundraising, and will spend this summer at Kessel Run, helping deploy software for the Air Force.
         </div>
     </div>
 </div>
