--- a/SPEAR/src/app/components/home/home.component.html
+++ b/SPEAR/src/app/components/home/home.component.html
@@ -14,8 +14,7 @@
 </div>
 <div class = "product-container" fxLayout = "row" fxLayoutAlign = "center center">
     <div class = "product-text" fxLayout = "column" fxLayoutAlign = "center center" >
-        Lorem ipsum dolor sit amet, eu cum nostro consetetur,
-        te fabulas impedit vis, pro habemus singulis consulatu ad. 
+        Fix complex data transfer issues as easy as 1, 2, 3
         <button mat-raised-button class = "product-button" fxLayoutAlign = "center center" (click) = "onProduct()">
             <div>What We Do</div>
         </button>
