--- a/SPEAR/src/app/app.component.scss
+++ b/SPEAR/src/app/app.component.scss
@@ -44,8 +44,8 @@
 
 .spear-text {
   font-size: 2em;
-  font-family: Georgia, serif;
-  font-weight: bold
+  font-family: "Playfair Display SC";
+  color: #034078;
 }
 
 .top-bar {
