--- a/SPEAR/src/app/components/product/product.component.html
+++ b/SPEAR/src/app/components/product/product.component.html
@@ -4,6 +4,6 @@
 <img src = "../../../assets/images/SpearSystemScreen2.PNG">
 <div class="label-text">Create the Rules and Launch the Service</div>
 <img src = "../../../assets/images/SpearPopup.PNG">
-<div class="label-text">Monitor it's Status</div>
+<div class="label-text">Monitor its Status</div>
 <img src = "../../../assets/images/SpearDashboard.PNG" >
 
