--- a/SPEAR/src/app/components/product/product.component.scss
+++ b/SPEAR/src/app/components/product/product.component.scss
@@ -1,7 +1,7 @@
 body, html {
   height: 100%;
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Playfair Display SC";
 }
 * {
   box-sizing: border-box;
@@ -21,7 +21,7 @@ body, html {
 .bg-text {
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
-  color: white;
+  color: #034078;
   font-weight: bold;
   font-size: 80px;
   border: 10px solid #f1f1f1;
@@ -42,7 +42,9 @@ img {
 .label-text {
   color: black;
   font-weight: bold;
+  color: #034078;
   font-size: 40px;
+  font-family: "Playfair Display SC";
   border: 10px solid #f1f1f1;
   top: 50%;
   left: 50%;
@@ -56,6 +58,8 @@ img {
   color: black;
   font-weight: bold;
   font-size: 40px;
+  font-family: "Playfair Display SC";
+  color: #034078;
   border: 10px solid #f1f1f1;
   left: 50%;
   z-index: 2;
